data cleaning - progressing on filtering months

--- a/module-1/pandas-project/your-code/Shark-project.ipynb
+++ b/module-1/pandas-project/your-code/Shark-project.ipynb
@@ -690,6 +690,321 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Case Number', 'Date', 'Year', 'Type', 'Country', 'Area', 'Location',\n",
+       "       'Activity', 'Name', 'Sex ', 'Age', 'Injury', 'Fatal (Y/N)', 'Time',\n",
+       "       'Species ', 'Investigator or Source', 'pdf', 'href formula', 'href',\n",
+       "       'Case Number.1', 'Case Number.2', 'original order'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df2.columns\n",
+    "raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/slimbook/.local/lib/python3.6/site-packages/ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "#BUENO#raw_df2[[\"Case Number\",\"Date\", \"Case Number.1\", \"Case Number.2\"]]\n",
+    "\n",
+    "#raw_df2[[\"Case Number\",\"Date\", \"Year\", \"Time\"]]\n",
+    "#raw_df2[\"Date\"].value_counts()\n",
+    "\n",
+    "#datetime.datetime.strptime(\"11/12/98\",\"%d/%m/%y\")\n",
+    "\n",
+    "\n",
+    "## Si sacamos el año de la fecha date, como valor numérico, tendremos escala temporal anual.\n",
+    "## Para los meses, podemos repartir en función de si lo tienen o no y ahí valorar si nos interesa hacer un análisis de eso\n",
+    "import re\n",
+    "#Extrae el formato fecha 00.00.00\n",
+    "\n",
+    "raw_df2[\"months\"] = raw_df2[\"Case Number\"].str.findall('\\d+.\\d+.\\d+')\n",
+    "#raw_df2[\"Case Number\"].replace(pattern, regex=True)\n",
+    "#raw_df2[\"Case Number\"].astype(date)\n",
+    "#raw_df2.columns\n",
+    "#raw_df2[\"cleaned_dates\"].value_counts()\n",
+    "q = raw_df2[\"cleaned_dates\"]\n",
+    "#q = raw_df2[\"cleaned_dates\"].replace(r'[/-]',',',regex=True)\n",
+    "q[q.isnull()] = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1957                            11\n",
+       "1942                             9\n",
+       "1956                             8\n",
+       "1950                             7\n",
+       "1941                             7\n",
+       "1958                             7\n",
+       "1949                             6\n",
+       "No date                          6\n",
+       "Oct-60                           5\n",
+       "1959                             5\n",
+       "12-Apr-01                        5\n",
+       "1954                             5\n",
+       "28-Jul-95                        5\n",
+       "1955                             5\n",
+       "No date, Before 1963             5\n",
+       "1970s                            5\n",
+       "05-Oct-03                        5\n",
+       "Aug-56                           5\n",
+       "1940                             5\n",
+       "27-Dec-08                        4\n",
+       "1961                             4\n",
+       "1945                             4\n",
+       "1938                             4\n",
+       "1960                             4\n",
+       "1995                             4\n",
+       "1890                             4\n",
+       "1952                             4\n",
+       "1960s                            4\n",
+       "14-Jun-12                        4\n",
+       "Before 1958                      4\n",
+       "                                ..\n",
+       " 11-Jan-1896                     1\n",
+       "Reported 21-Feb-1835             1\n",
+       "1980                             1\n",
+       "30-Dec-1890                      1\n",
+       "Circa 1872                       1\n",
+       "19-Jul-71                        1\n",
+       "Aug-66                           1\n",
+       "20-Jul-81                        1\n",
+       "Reported 06-Mar-1886             1\n",
+       "28-Jan-16                        1\n",
+       "24-Mar-02                        1\n",
+       "Reported 04-Jun-1876             1\n",
+       "16-Aug--2011                     1\n",
+       "Reported 20-Feb-1936             1\n",
+       "06-Jun-89                        1\n",
+       "Circa 1958                       1\n",
+       "11-Aug-02                        1\n",
+       "Mid Jul-1985 or mid Jul-1986     1\n",
+       "24-Jun-58                        1\n",
+       "17-Mar-84                        1\n",
+       "21-May-06                        1\n",
+       "04-Apr-1893                      1\n",
+       "07-Apr-05                        1\n",
+       "17-Aug-10                        1\n",
+       "18-Oct-98                        1\n",
+       "25-Sep-71                        1\n",
+       "20-May-75                        1\n",
+       "19-Mar-67                        1\n",
+       "08-Jul-12                        1\n",
+       "10-Jan-66                        1\n",
+       "Name: Date, Length: 5128, dtype: int64"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#raw_df2[\"Case Number\"].apply(raw_df2.to_datetime(\"Case Number\"))\n",
+    "#\\.\\d\\d\\d\\d\\.()\n",
+    "\n",
+    "\n",
+    "\n",
+    "#int(s) for s in str.split() if s.isdigit()] ==> [23, 11, 2] \n",
+    "raw_df2[\"Date\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                               18-Sep-16\n",
+       "1                                               18-Sep-16\n",
+       "2                                               18-Sep-16\n",
+       "3                                               17-Sep-16\n",
+       "4                                               16-Sep-16\n",
+       "5                                               15-Sep-16\n",
+       "6                                               11-Sep-16\n",
+       "7                                               07-Sep-16\n",
+       "8                                               06-Sep-16\n",
+       "9                                               05-Sep-16\n",
+       "10                                              05-Sep-16\n",
+       "11                                              04-Sep-16\n",
+       "12                                              01-Sep-16\n",
+       "13                                              29-Aug-16\n",
+       "14                                              29-Aug-16\n",
+       "15                                              27-Aug-16\n",
+       "16                                              25-Aug-16\n",
+       "17                                              07-Aug-16\n",
+       "18                                              06-Aug-16\n",
+       "19                                              04-Aug-16\n",
+       "20                                              29-Jul-16\n",
+       "21                                              28-Jul-16\n",
+       "22                                              28-Jul-16\n",
+       "23                                              27-Jul-16\n",
+       "24                                              26-Jul-16\n",
+       "25                                              24-Jul-16\n",
+       "26                                              23-Jul-16\n",
+       "27                                              23-Jul-16\n",
+       "28                                              20-Jul-16\n",
+       "29                                              17-Jul-16\n",
+       "                              ...                        \n",
+       "5962                                         World War II\n",
+       "5963                                          Before 1905\n",
+       "5964                              A few years before 1938\n",
+       "5965                                              No date\n",
+       "5966                                          Early 1930s\n",
+       "5967                                          Before 1927\n",
+       "5968                                  Between 1918 & 1939\n",
+       "5969                                              No date\n",
+       "5970                                              No date\n",
+       "5971                                              No date\n",
+       "5972                                           1920 -1923\n",
+       "5973                                          Before 1921\n",
+       "5974                                          Before 1911\n",
+       "5975                                          Before 1921\n",
+       "5976                                          Before 1921\n",
+       "5977                                          Before 1917\n",
+       "5978                          Before          17-Jul-1916\n",
+       "5979    No date (3 days after preceding incident) & pr...\n",
+       "5980                          Before          19-Jul-1913\n",
+       "5981                                          Before 1911\n",
+       "5982                                           Circa 1862\n",
+       "5983                                          Before 1906\n",
+       "5984                                          Before 1906\n",
+       "5985                                          Before 1906\n",
+       "5986                                          Before 1906\n",
+       "5987                                          Before 1903\n",
+       "5988                                          Before 1903\n",
+       "5989                                            1900-1905\n",
+       "5990                                            1883-1889\n",
+       "5991                                            1845-1853\n",
+       "Name: Date, Length: 5992, dtype: object"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df2[\"Date\"]\n",
+    "\n",
+    "def findMonth (m):\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Feb\" or \"feb\" in m\n",
+    "        return 1\n",
+    "    for \"Mar\" or \"mar\" in m\n",
+    "        return 1\n",
+    "    for \"Apr\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "    for \"Jan\" or \"jan\" in m\n",
+    "        return 1\n",
+    "\n",
+    "paraunacolumnaqueyodefina.apply(findMonth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
