--- a/module-1/pandas-project/your-code/shark_attacks_project.ipynb
+++ b/module-1/pandas-project/your-code/shark_attacks_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -2104,7 +2104,7 @@
        "[25723 rows x 24 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,17 +2128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25723, 24)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Cuantas líneas y columnas\n",
-    "tamaño = data.shape"
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2152,7 +2163,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2177,7 +2188,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2185,6 +2196,52 @@
    "source": [
     "tipo_datos = data.dtypes\n",
     "tipo_datos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Case Number               17021\n",
+       "Date                      19421\n",
+       "Year                      19423\n",
+       "Type                      19425\n",
+       "Country                   19471\n",
+       "Area                      19876\n",
+       "Location                  19961\n",
+       "Activity                  19965\n",
+       "Name                      19631\n",
+       "Sex                       19986\n",
+       "Age                       22252\n",
+       "Injury                    19449\n",
+       "Fatal (Y/N)               19960\n",
+       "Time                      22775\n",
+       "Species                   22259\n",
+       "Investigator or Source    19438\n",
+       "pdf                       19421\n",
+       "href formula              19422\n",
+       "href                      19421\n",
+       "Case Number.1             19421\n",
+       "Case Number.2             19421\n",
+       "original order            19414\n",
+       "Unnamed: 22               25722\n",
+       "Unnamed: 23               25721\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Voy a mirar cuantos nulos tengo en cada variable para ver si puedo borrar alguna columna\n",
+    "null_cols = data.isnull().sum()\n",
+    "null_cols[null_cols > 0]"
    ]
   },
   {
@@ -2414,8 +2471,12 @@
     "#data[\"Case Number.2\"].value_counts()\n",
     "#data['original order'].value_counts()\n",
     "\n",
+    "#Voy a borrar estas dos columnas ya que como acabamos de ver casi todos los valores son nulos:\n",
     "data1 = data.drop(columns=\"Unnamed: 22\")\n",
     "data2 = data1.drop(columns=\"Unnamed: 23\")\n",
+    "\n",
+    "#También voy a borrar estas tres columnas, ya que nada tienen que ver con mi hipótesis:\n",
+    "#Aunque tengo dudas de si tendría que borrar estas columnas o no (pensando en la reutilización que se podría hacer en el futuro, de ellas).\n",
     "data3 = data2.drop(columns=\"Case Number.1\")\n",
     "data4 = data3.drop(columns=\"Case Number.2\")\n",
     "data5 = data4.drop(columns=\"original order\")\n",
@@ -2549,9 +2610,9 @@
    "outputs": [],
    "source": [
     "#Genero la función para modificar los objetos NaN por 0:\n",
-    "def clean_object(input_object):\n",
-    "    if input_object == NaN:\n",
-    "        return 0"
+    "#def clean_object(input_object):\n",
+    " #   if input_object == NaN:\n",
+    "  #      return 0"
    ]
   },
   {
@@ -2568,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2578,11 +2639,11 @@
        "Y          1388\n",
        "UNKNOWN      71\n",
        " N            7\n",
-       "N             1\n",
+       "y             1\n",
        "Name: Fatal (Y/N), dtype: int64"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,26 +2656,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "N          4302\n",
-       "Y          1389\n",
-       "UNKNOWN      72\n",
-       "Name: Fatal (Y/N), dtype: int64"
-      ]
-     },
-     "execution_count": 212,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'Fatal (Y/N)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   4380\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4381\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mlibindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value_box\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4382\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.get_value_box\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.get_value_at\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/util.pxd\u001b[0m in \u001b[0;36mpandas._libs.util.get_value_at\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/util.pxd\u001b[0m in \u001b[0;36mpandas._libs.util.validate_indexer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-1f9e00bc214d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Fatal (Y/N)\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'UNKNOWN'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'#VALUE!'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0md2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[^N]\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"N\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#data3 = data2.replace(['y', ' N','N ','M','2017',],['Y','N','N','N','UNKNOWN'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#data3[\"Fatal (Y/N)\"].value_counts()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    866\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    867\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 868\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    869\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    870\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   4387\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mInvalidIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4388\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4389\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4390\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pragma: no cover\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4391\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   4373\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4374\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 4375\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   4376\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4377\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mholds_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_boolean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Fatal (Y/N)'"
+     ]
     }
    ],
    "source": [
-    "data3 = data2.replace(['y', ' N','N ','M','2017',],['Y','N','N','N','UNKNOWN'])\n",
-    "data3[\"Fatal (Y/N)\"].value_counts()"
+    "d2[\"Fatal (Y/N)\"].replace(['UNKNOWN', '#VALUE!'], np.nan, inplace=True)\n",
+    "d2.replace(\"[^N]\", \"N\", inplace=True)\n",
+    "#data3 = data2.replace(['y', ' N','N ','M','2017',],['Y','N','N','N','UNKNOWN'])\n",
+    "#data3[\"Fatal (Y/N)\"].value_counts()"
    ]
   },
   {
