--- a/module-1/pandas-project/your-code/Project.ipynb
+++ b/module-1/pandas-project/your-code/Project.ipynb
@@ -705,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### By looking at the dataframe I see that the columns \"Case Number\", \"Case Number.1\" and \"Case Number.2\" are pretty similar. Let's see all the registers in which this columns differ:"
+    "### By looking at the dataframe I see that the columns \"Case Number\", \"Case Number.1\" and \"Case Number.2\" are quite similar. Let's see all the registers in which this columns differ:"
    ]
   },
   {
