Comenzado a crear el documento de entrega

--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -9564,7 +9564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -9583,12 +9583,11 @@
       "text/plain": [
        "N          3414\n",
        "Y           712\n",
-       "UNKNOWN      45\n",
-       "nan           4\n",
+       "UNKNOWN      49\n",
        "Name: Fatal (Y/N), dtype: int64"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9596,6 +9595,7 @@
    "source": [
     "wdf6 = df_cleaning.copy()\n",
     "print(wdf6[\"Fatal (Y/N)\"].value_counts())\n",
+    "wdf6['Fatal (Y/N)'].fillna(\"UNKNOWN\",inplace=True)\n",
     "wdf6[\"Fatal (Y/N)\"] = wdf6[\"Fatal (Y/N)\"].apply(str)\n",
     "wdf6[\"Fatal (Y/N)\"] = wdf6[\"Fatal (Y/N)\"].apply(lambda x: x.strip())\n",
     "\n",
