table to analyze level 1

--- a/module-1/pandas-project/your-code/shark_project.ipynb
+++ b/module-1/pandas-project/your-code/shark_project.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "(5483, 14)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,6 +799,146 @@
     "\n",
     "display(dh_clean_base.head())\n",
     "dh_clean_base.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Fatal (Y/N)</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>9</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>13h00</td>\n",
+       "      <td>16</td>\n",
+       "      <td>M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>9</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>11h00</td>\n",
+       "      <td>36</td>\n",
+       "      <td>M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>9</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>10h43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>9</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>9</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2 m shark</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Month    Country      Area Activity   Time  Age Sex  Fatal (Y/N)  \\\n",
+       "0  2016      9        USA   Florida  Surfing  13h00   16    M           N   \n",
+       "1  2016      9        USA   Florida  Surfing  11h00   36    M           N   \n",
+       "2  2016      9        USA   Florida  Surfing  10h43   43    M           N   \n",
+       "3  2016      9  AUSTRALIA  Victoria  Surfing    NaN  NaN    M           N   \n",
+       "4  2016      9  AUSTRALIA  Victoria  Surfing    NaN  NaN    M           N   \n",
+       "\n",
+       "    Species   \n",
+       "0        NaN  \n",
+       "1        NaN  \n",
+       "2        NaN  \n",
+       "3        NaN  \n",
+       "4  2 m shark  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Creating a new dataframe with the columns to validate the hypothesis - level 1\n",
+    "\n",
+    "\n",
+    "dhf = dh_clean_base[['Year', 'Month', 'Country', 'Area', 'Activity', 'Time', 'Age', 'Sex ', 'Fatal (Y/N)', 'Species ']]\n",
+    "\n",
+    "\n",
+    "#dhf = dh_clean_base[dh_clean_base['Year'], dh_clean_base['Month']]\n",
+    "\n",
+    "display(dhf.head())"
    ]
   },
   {
